io/main.css
@font-face{
    font-family:"CandelaBold";
    src:url("fonts/candela-bold.otf"),url("fonts/candela-bold.woff");
}
html{
    /*min-height:100%;*/
    height:100%;
    /*position:relative;*/
    overflow:hidden;
}
body{
    height:100%;
    margin:0;
    padding:0;
    border:0;
    position:relative;
    overflow:hidden;
}
.full-screen-panel{
    display:block;
    width:100%;
    height:100%;
    margin:0;
    padding:0;
    border:0;
    position:absolute;
    overflow:hidden;
}
#welcome-panel{
    z-index:2;
    background-color:black;
    opacity:1;
    transition:opacity 1s;
}
#welcome-panel.hidden{
    opacity:0;
    pointer-events:none;
}
#game-panel{
    z-index:1;
    background-color:black;
}
#main-canvas{
    display:block;
    width:100%;
    height:100%;
    margin:0;
    padding:0;
    border:0;
}
#welcome-flex{
    display:flex;
    flex-direction:column;
    justify-content:center;
    align-items:center;
    width:100%;
    height:100%;
    margin:0;
    padding:0;
    border:0;
}
.flex-item-expand{
    flex:1 1 auto;
    width:100%;
    height:200px;
}
#flex-item-title{
    flex:0 0 auto;
    width:100%;
    height:200px;
    box-sizing:border-box;
    text-align:center;
}
#flex-item-name{
    flex:0 0 auto;
    width:500px;
    max-width:100%;
    height:44px;
    padding:0 24px;
    box-sizing:border-box;
}
#canvas-clipper{
    display:inline-block;
    /*margin:0 auto;*/
}
#title-canvas{
    position:relative;
}
#name-textbox{
    width:100%;
    border:0 transparent;
    box-sizing:border-box;
    height:100%;
    font-family:"CandelaBold",sans-serif;
    font-size:24px;
    text-align:center;
    border-radius:8px;
    background-color:rgb(31,31,31);
    color:white;
    box-shadow:0 0 12px 12px rgb(224,255,255);
    outline:none;
}
#name-textbox:focus{
    outline:none;
}
#name-textbox::-webkit-input-placeholder{ /* Chrome/Opera/Safari */
    color:rgb(93,93,93);
}
#name-textbox::-moz-placeholder{ /* Firefox 19+ */
    color:rgb(93,93,93);
    opacity:1;
}
#name-textbox:-ms-input-placeholder{ /* IE 10+ */
    color:rgb(93,93,93);
}
#name-textbox:-moz-placeholder{ /* Firefox 18- */
    color:rgb(93,93,93);
    opacity:1;
}
#name-textbox::placeholder{ /* standard */
    color:rgb(93,93,93);
    opacity:1;
}

